<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/description"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView_second_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/description_second_part"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/code_editText"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="159dp"
            android:background="@layout/my_edit_text_border"
            android:ems="10"
            android:hint="@string/edit_code"
            android:inputType="textPersonName"
            android:paddingStart="5dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="53dp"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/with_code_button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@id/code_editText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@color/colorAccent"
            android:text="@string/with_code"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/without_code_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@id/with_code_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@color/colorAccent"
            android:text="@string/without_code"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>